--- a/agda.tex
+++ b/agda.tex
@@ -6,7 +6,7 @@ have mechanized the semantics of Hazelnut using the Agda proof assistant \cite{n
 refer readers unfamiliar with Agda to the Agda Wiki, hosted
 at \url{http://wiki.portal.chalmers.se/agda/}.
 
-This development is available in the supplemental material. At the time of submission, the full set of rules is available and the proofs of Theorem \ref{thrm:actsafe}, Theorem \ref{lemma:movement-erasure} and a number of technical lemmas that we elided or mentioned informally in the text are complete. We also have nearly all of the cases of Reachability and Constructability complete (and see no major barrier to the remaining cases -- they are simply tedious.) \todo{include link to repos in non-anonymous supplementals}\todo{talk about determinism either here or there}
+This development is available in the supplemental material. At the time of submission, the full set of rules is available and the proofs of Theorem \ref{thrm:actsafe}, Theorem \ref{lemma:movement-erasure} and a number of technical lemmas that we elided or mentioned informally in the text are complete. We also have nearly all of the cases of Reachability and Constructability complete, and we see no major barrier to the remaining cases -- we prioritized developing a clear exposition of our contributions after proving representative cases and finding that they were straightforward. The remaining cases will be completed in the repository linked in the non-anonymous supplementary material.\todo{include link to repos in non-anonymous supplementals}\todo{talk about determinism either here or there}
 
 The documentation 
 includes a more detailed discussion of the technical representation
